# ML-Code-Challenges

./: README.md  makefile  problem_scrapper.py  pyproject.toml  update_scrapping.py
data/: problems_index.json
src/solved/deep learning/: 22_Sigmoid Activation Function Understanding (easy).py  23_Softmax Activation Function Implementation (easy).py  24_Single Neuron (easy).py  25_Single Neuron with Backpropagation (medium).py  26_Implementing Basic Autograd Operations (medium).py  39_Implementation of Log Softmax Function.py  40_Implementing a Custom Dense Layer in Python.py  41_Simple Convolutional 2D Layer.py  42_Implement ReLU Activation Function.py  44_Leaky ReLU Activation Function.py  49_Implement Adam Optimization Algorithm.py  53_Implement Self-Attention Mechanism.py  54_Implementing a Simple RNN.py
src/solved/linear algebra/: 10_Calculate Covariance Matrix (medium).py  11_Solve Linear Equations using Jacobi Method (medium).py  12_Singular Value Decomposition (SVD) (hard).py  13_Determinant of a 4x4 Matrix using Laplace's Expansion (hard).py  1_Matrix times Vector (easy).py  27_Transformation Matrix from Basis B to C.py  28_SVD of a 2x2 Matrix using eigen values & vectors.py  2_Transpose of a Matrix (easy).py  35_Convert Vector to Diagonal Matrix.py  37_Calculate Correlation Matrix.py  3_Reshape Matrix (easy).py  48_Implement Reduced Row Echelon Form (RREF) Function.py  4_Calculate Mean by Row or Column (easy).py  55_2D Translation Matrix Implementation.py  5_Scalar Multiplication of a Matrix (easy).py  6_Calculate Eigenvalues of a Matrix (medium).py  (+3 more)
(+23 files in other folders)
